הוספת תיבות סימון לפרסום מכרז,הוספת הצג פרטי מפרסם למכרזים שזכיתי בהם וסידור התפריט בעמוד הגשת ההצעה

--- a/Tenders-main/frontend/home.html
+++ b/Tenders-main/frontend/home.html
@@ -16,9 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container d-flex justify-content-start align-items-center">
-            <a id="publishTenderButton" class="btn btn-primary me-3" href="categories.html">
-                פרסום מכרז
-            </a> 
+            <a id="publishTenderButton" class="btn btn-primary me-3" href="#">פרסום מכרז</a>
             <button class="navbar-toggler my-button" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,18 +57,10 @@
             </div>
             
             <span id="user-nav-item" style="display: none;"></span>
-            <a class="navbar-brand position-relative" href="cart.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="עגלת קניות">
-                <i class="bi bi-cart3 my-button"></i>
-                <span id="cart-count" class="cart-count"></span> 
-            </a>
             
             <a id="loginButton" class="navbar-brand" href="login.html" data-bs-toggle="tooltip"
                 data-bs-placement="bottom" title="התחבר">
                 <i class="bi bi-person my-button"></i>
-            </a>
-            <a id="deleteUserButton" class="navbar-brand" href="#" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                title="מחק משתמש">
-                <i class="bi bi-person-x my-button"></i>
             </a>
             <a class="navbar-brand" href="profile.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="האזור האישי שלי">
                 <i class="bi bi-person-vcard my-button"></i>
@@ -92,7 +82,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="Cart.js"></script>
-    <script src="app.js"></script>
+    <script src="home.js"></script>
     <script src="user.js"></script>
   
     <!-- הוספת ספריות Bootstrap JS -->
