--- a/Tenders-main/frontend/bid.html
+++ b/Tenders-main/frontend/bid.html
@@ -5,34 +5,46 @@
   <title>הגש הצעת מחיר</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <link href="bid.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title> עגלת קניות</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container d-flex align-items-center justify-content-">
-            <!-- לוגו בצד שמאל -->
-            <a class="navbar-brand me-3">
-                <img src="image/il.png" alt="Logo" width="20" class="d-inline-block align-text-top">
-            </a>
-    
-            <!-- אייקונים גם בצד שמאל -->
-            <div class="d-flex align-items-center gap-0">
-                <a class="navbar-brand" href="home.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="דף הבית">
-                    <i class="bi bi-house my-button"></i>
-                </a>
-                <a class="navbar-brand position-relative" href="cart.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="עגלת קניות">
-                    <i class="bi bi-cart3 my-button"></i>
-                    <span id="cart-count" class="cart-count"></span> 
-                </a>
-                <a id="loginButton" class="navbar-brand" href="login.html" data-bs-toggle="tooltip" data-bs-placement="bottom" title="התחבר">
-                    <i class="bi bi-person my-button"></i>
-                </a>
-            </div>
-        </div>
-    </nav>
+       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container d-flex justify-content-start align-items-center">
+          <button class="navbar-toggler my-button" type="button" data-bs-toggle="offcanvas"
+              data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div style="flex-grow: 1"></div>
+  
+          <span id="user-nav-item" style="display: none;"></span>
+  
+          <a id="loginButton" class="navbar-brand" href="login.html" data-bs-toggle="tooltip"
+              data-bs-placement="bottom" title="התחבר">
+              <i class="bi bi-person my-button"></i>
+          </a>
+          <a class="navbar-brand" href="profile.html" data-bs-toggle="tooltip"
+              data-bs-placement="bottom" title="האזור האישי שלי">
+              <i class="bi bi-person-vcard my-button"></i>
+          </a>
+          <a class="navbar-brand" href="home.html" data-bs-toggle="tooltip"
+              data-bs-placement="bottom" title="דף הבית">
+              <i class="bi bi-house my-button"></i>
+          </a>
+          <a id="logoutButton" style="display: none;" class="navbar-brand" href="#" data-bs-toggle="tooltip"
+          data-bs-placement="bottom" title="התנתק">
+          <i class="bi bi-escape my-button"></i>
+          </a>
+          <!-- הסרט הצהוב בצד שמאל -->
+          <div class="me-auto">
+              <a class="navbar-brand" href="#">
+                  <img src="image/il.png" alt="Logo" width="20" class="d-inline-block align-text-top">
+              </a>
+          </div>
+      </div>
+  </nav>    
 <div class="bid-container text-center">
   <h3 id="productName"></h3>
   <img id="productImage" class="product-image my-3" src="" alt="">
@@ -46,7 +58,7 @@
     </div>
 
     <div class="credit-card text-end">
-      <h5 class="mb-3">פרטי אשראי (לתשלום 5 ש"ח):</h5>
+      <h5 class="mb-3 text-start">פרטי אשראי (לתשלום 5 ש"ח):</h5>
       <input type="text" class="form-control" placeholder="מספר כרטיס" required>
       <input type="text" class="form-control" placeholder="תוקף (MM/YY)" required>
       <input type="text" class="form-control" placeholder="CVV" required>
@@ -57,7 +69,10 @@
     <button type="submit" class="btn btn-dark mt-3">שלם 5 ש"ח והגש הצעה</button>
   </form>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+    <script src="user.js"></script>
 <script src="bid.js"></script>
 </body>
 </html>
