--- a/Tenders-main/frontend/bid.html
+++ b/Tenders-main/frontend/bid.html
@@ -66,7 +66,16 @@
 
     <p class="error-msg mt-2" id="errorMsg"></p>
 
-    <button type="submit" class="btn btn-dark mt-3">שלם 5 ש"ח והגש הצעה</button>
+    <div class="form-check mt-3 d-flex justify-content-end" dir="rtl">
+      <input class="form-check-input mt-1 ms-2" type="checkbox" id="terms-1">
+      <label class="form-check-label" for="terms-1">
+        אני מאשר/ת כי האתר אינו אחראי לאמינות המשתמשים, ותפקידו להעברת כתובות האימייל בין הצדדים ליצירת קשר בלבד.
+      </label>
+    </div>
+    
+
+    <button type="submit" id="submitBtn" class="btn btn-dark mt-3" disabled>שלם 5 ש"ח והגש הצעה</button>
+    
   </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
