--- a/Tenders-main/frontend/publish-tender.html
+++ b/Tenders-main/frontend/publish-tender.html
@@ -120,7 +120,7 @@
   
 <!-- כפתור תשלום ראשוני -->
 <div class="text-center mt-4">
-    <button id="open-payment-form" class="btn btn-primary">💳 שלם 100 ש"ח</button>
+    <button id="open-payment-form" type="button" class="btn btn-primary">💳 שלם 100 ש"ח</button>
 </div>
 
 <!-- טופס תשלום מדומה (מוסתר בהתחלה) -->
@@ -319,7 +319,17 @@
                         <input type="${q.type}" class="form-control" id="${q.id}" name="${q.id}" required>`;
                     questionsContainer.appendChild(div);
                 });
-            }            
+                const dynamicInputs = document.querySelectorAll("#dynamic-questions input");
+                dynamicInputs.forEach(input => {
+                    input.addEventListener("input", checkPaymentFields);
+                });
+                
+            } 
+            const dynamicInputs = document.querySelectorAll("#dynamic-questions input");
+            dynamicInputs.forEach(input => {
+                input.addEventListener("input", checkPaymentFields);
+            });
+                   
         });
     </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
