עדכון קבצי פרונט ומיילים

--- a/Tenders-main/frontend/home.html
+++ b/Tenders-main/frontend/home.html
@@ -47,7 +47,7 @@
                             <a class="nav-link my-button" href="#" data-filter="animals">בעלי חיים</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link my-button" href="#" data-filter="electronics">אלקטרוניקה</a>
+                            <a class="nav-link my-button" href="#" data-filter="babies">מוצרי תינוקות</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link my-button" href="#" data-filter="jewelry">תכשיטים</a>
