--- a/Tenders-main/frontend/product.html
+++ b/Tenders-main/frontend/product.html
@@ -33,6 +33,16 @@
         <div class="d-flex justify-content-center align-items-center">
             <div style="color: black;" id="product-info"></div>
         </div>
+        <!-- Modal להצגת תמונה מוגדלת -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content bg-transparent border-0 position-relative">
+        <div class="modal-body d-flex justify-content-center align-items-center p-0">
+          <img id="modalImage" class="img-fluid" style="max-height: 90vh; object-fit: contain;" alt="תמונה מוגדלת" />
+        </div>
+      </div>
+    </div>
+  </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
