--- a/Tenders-main/frontend/bid.html
+++ b/Tenders-main/frontend/bid.html
@@ -69,13 +69,13 @@
     <div class="form-check mt-3 d-flex justify-content-end" dir="rtl">
       <input class="form-check-input mt-1 ms-2" type="checkbox" id="terms-1">
       <label class="form-check-label" for="terms-1">
-        אני מאשר/ת כי האתר אינו אחראי לאמינות המשתמשים, ותפקידו להעברת כתובות האימייל בין הצדדים ליצירת קשר בלבד.
+        אני מאשר/ת כי האתר אינו אחראי לאמינות המשתמשים, ותפקידו להעברת כתובות האימייל בין הצדדים ליצירת קשר בלבד. וכן אני מודע/ת שלא יהיה ניתן לערוך או למחוק את הצעת המחיר לאחר שהגשה.
       </label>
     </div>
     
 
     <button type="submit" id="submitBtn" class="btn btn-dark mt-3" disabled>שלם 5 ש"ח והגש הצעה</button>
-    
+
   </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
